--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "22.0.1"
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "ru.nnesterov.smiley"
@@ -20,8 +20,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:23.0.1'
-    compile 'com.google.android.gms:play-services:7.8.0'
-    compile 'com.android.support:design:23.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:support-v4:23.0.1'
+    implementation 'com.google.android.gms:play-services:7.8.0'
+    implementation 'com.android.support:design:23.0.0'
 }
